# cufarul

./: Cargo.toml
cli/: Cargo.toml
cli/src/: args.rs  dump.rs  main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs
lib/src/db/: core.rs  database.rs  edge.rs  error.rs  identity.rs  memory.rs  mod.rs  node.rs  references.rs  uid.rs
lib/src/model/: collections.rs  composition.rs  error.rs  identity.rs  interface.rs  mod.rs  person.rs  references.rs
lib/src/model/entity/: composition.rs  mod.rs  performance.rs  person.rs  publication.rs  taxonomy.rs  text.rs
lib/src/model/entity/ser/: composition.rs  link.rs  mod.rs  mode.rs  performance.rs  person.rs  publication.rs  taxonomy.rs  text.rs
lib/src/model/identity/: collections.rs  mod.rs  references.rs
lib/src/model/property/: contribution.rs  generic.rs  link.rs  mod.rs  mode.rs  reference.rs  translation.rs
lib/src/model/serde/: lang.rs  mod.rs  reference.rs  string.rs
lib/src/repo/: core.rs  cufarul.rs  de.rs  des.rs  error.rs  index.rs  loader.rs  mod.rs  repo.rs  spec.rs
lib/src/serde/: error.rs  generic.rs  link.rs  mod.rs  property.rs  reference.rs  string.rs  translation.rs
src/: error.rs  fields.rs  main.rs  models.rs
src/cli/: dump.rs  mod.rs
src/database/: collection.rs  loader.rs  mod.rs  spec.rs  version.rs
src/lib/src/db/: edge.rs  error.rs
src/lib/src/model/: collections.rs
src/lib/src/repo/: mod.rs
src/lib/src/serde/: lang.rs  mod.rs  reference.rs
src/models/: mod.rs  person.rs  text.rs
src/serde/: datatypes.rs  fields.rs  lang.rs  mod.rs  translation.rs
