[package]
name = "cufarul"
version = "0.1.0"
authors = ["Alexandru N. Onea <alexandru@onea.ro>"]
description = "Command-line interface for the byzantine music database"
keywords = ["utility", "database"]
license = "GPLv2"
edition = "2021"

[[bin]]
name = "cufarul-cli"
path = "src/main.rs"

[dependencies]
argh = "0.1.12"
serde_json = "1.0.105"

[dependencies.cufarul-lib]
path = "../lib"
version = "0.1.0"
