[package]
name = "cufarul-lib"
version = "0.1.0"
authors = ["Alexandru N. Onea <alexandru@onea.ro>"]
description = "In-memory storage for the byzantine music database"
keywords = ["graph", "database"]
license = "GPLv2"
edition = "2021"

[lib]
name = "cufarul"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
md5 = "0.7.0"
