[package]
name = "cufarul-lib"
version = "0.1.0"
authors = ["Alexandru N. Onea <alexandru@onea.ro>"]
description = "In-memory storage for the byzantine music database"
keywords = ["graph", "database"]
license = "GPLv2"
edition = "2021"

[lib]
name = "cufarul"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
erased-serde = "0.3.31"
url = "2.4.1"
regex = "1.9.5"
